# c-_practice

chapter_1/: CMakeLists.txt
chapter_1/src/include/: common.h  index.h  string_util.h
chapter_1/src/main/: index.cpp  main.cpp  string_util.cpp
